sfdx-source/force-app/main/default/objects/Order/fields/Account_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Segment__c</fullName>
    <description>LEM-14577: It is used to store Account Segment values.</description>
    <formula>Text(Account.Segment__c)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Account Segment</label>
    <type>Text</type>
</CustomField>