sfdx-source/force-app/main/default/objects/Order/fields/Backend_Systems__c.field-meta.xml
<CustomField>
    <fullName>Backend_Systems__c</fullName>
    <description>Description: LEM-2307: Summarize Business ID platforms on Order for Business creation and evaluation logic</description>
    <label>Backend Systems</label>
    <length>40</length>
    <type>Text</type>
</CustomField>