sfdx-source/force-app/main/default/objects/Order/fields/Deal_Terms__c.field-meta.xml
<CustomField>
    <fullName>Deal_Terms__c</fullName>
    <description>LEM-451: Indicate if non-productized deal terms are included on Quote</description>
    <label>Deal Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Deal_Terms</valueSetName>
    </valueSet>
</CustomField>