sfdx-source/force-app/main/default/objects/Order/fields/Delivery_Commission__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Commission__c</fullName>
    <description>Introduced in LEM-1851 to carry the final_commission value from the order item record forward.</description>
    <label>Delivery Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>