sfdx-source/force-app/main/default/objects/Order/fields/Drive_Auto_Activation_Supported__c.field-meta.xml
<CustomField>
    <fullName>Drive_Auto_Activation_Supported__c</fullName>
    <description>LEM-2610: Identify if a Drive Products on a Contract are eligible to be auto-activated</description>
    <label>Drive Auto-Activation Supported?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>