sfdx-source/force-app/main/default/objects/Order/fields/Invoicing_Payment_Account__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Payment_Account__c</fullName>
    <description>LEM-2361: Allow user to set payment terms on Quote</description>
    <formula>SBQQ__Quote__r.Invoicing_Payment_Account__r.Payment_Account__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoicing Payment Account</label>
    <type>Text</type>
</CustomField>