sfdx-source/force-app/main/default/objects/Order/fields/Opt_In_Opt_Out_Decision__c.field-meta.xml
<CustomField>
    <fullName>Opt_In_Opt_Out_Decision__c</fullName>
    <description>https://doordash.atlassian.net/browse/LEM-5316</description>
    <label>Franchise Enrollment Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Opt_In_Opt_Out_Decision</valueSetName>
    </valueSet>
</CustomField>