sfdx-source/force-app/main/default/objects/Order/fields/Pricing_Tier__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Tier__c</fullName>
    <formula>IF(
  Account_Segment__c = &apos;SMB&apos;,
  SMB_Pricing_Tier__c,
  IF(
    TEXT(Account.Pricing_Tier_Override__c) != null,
    VALUE(TEXT(Account.Pricing_Tier_Override__c)),
    (
    IF(
      OR(
        TEXT(Account.Package_Override__c) == &apos;Premier&apos;,
        Delivery_Commission__c &gt;= Account.SubMarket__r.Premium_Commission_Floor__c
      ),
      Account.SubMarket__r.Submarket_Premium_Tier__c,
      Account.SubMarket__r.Submarket_Base_Tier__c
    )
    )
  )
)</formula>
    <label>Pricing Tier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>