sfdx-source/force-app/main/default/objects/Order/fields/Primary_Order__c.field-meta.xml
<CustomField>
    <fullName>Primary_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-181: Used for Activation Order to Specify the Primary Order they were created from.</description>
    <label>Primary Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>