sfdx-source/force-app/main/default/objects/Order/fields/Ready_for_Activation__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Activation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-181: Custom indicator to use in automated order activation management.</description>
    <label>Ready for Activation</label>
    <type>Checkbox</type>
</CustomField>