sfdx-source/force-app/main/default/objects/Order/fields/SMB_Pricing_Tier__c.field-meta.xml
<CustomField>
    <fullName>SMB_Pricing_Tier__c</fullName>
    <description>LEM-16377: It is used to roll up the max value from order product&apos;s field &apos;SMB Pricing Tier Clone&apos;.</description>
    <label>SMB Pricing Tier</label>
    <summarizedField>OrderItem.SMB_Pricing_Tier_Clone__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>