sfdx-source/force-app/main/default/objects/Order/fields/Work_Order_Types__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Types__c</fullName>
    <description>Description: LEM-2307: Summarize Business ID platforms on Order for Business creation and evaluation logic</description>
    <label>Work Order Types</label>
    <length>40</length>
    <type>Text</type>
</CustomField>