sfdx-source/force-app/main/default/objects/Order/recordTypes/Activation_Order.recordType-meta.xml
<RecordType>
    <fullName>Activation_Order</fullName>
    <active>true</active>
    <description>LEM - 181</description>
    <label>Activation Order</label>
</RecordType>