sfdx-source/force-app/main/default/objects/Order/recordTypes/Primary_Order.recordType-meta.xml
<RecordType>
    <fullName>Primary_Order</fullName>
    <active>true</active>
    <description>LEM-181 - Initial Setup for Order</description>
    <label>Primary Order</label>
</RecordType>